fix/center project button on mobile

--- a/themes/antonija/assets/scss/styles.scss
+++ b/themes/antonija/assets/scss/styles.scss
@@ -419,7 +419,7 @@ body {
 
                     #danielrahman {
                         padding: .4rem 0;
-                        text-align: left;
+                        margin-right: 0;
                     }
                 }
             }
